# papernews

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
hooks/: copy-to-grimmory.sh
papernews/: config.py  fetch.py  llm.py  render.py  rewrite.py  store.py  summarize.py  template.tex.j2  web.py  wiki.py
tests/: test_admin.py  test_render.py
